--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,9 @@
     margin: 0;
 }
 
-/* html {
+ html {
     scroll-behavior: smooth;
-} */
+}
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -27,7 +27,7 @@ p {
 .container {
     max-width: 1100px;
     margin: auto;
-    padding: 0 2rem;
+    padding: 0 1rem;
     overflow: hidden;
 }
 
@@ -67,7 +67,7 @@ p {
 }
 
 .py-1 {
-    padding: 1.5rem 0;
+    padding: 2.5rem 0;
 }
 
 .py-2 {
@@ -93,8 +93,8 @@ p {
 .btn {
     display: inline-block;
     color: #fff;
-    background: #66ccff;
-    padding: 0.5rem 2rem;
+    background: #333;
+    padding: 0.75rem 2rem;
     border: none;
     border-radius: 5px;
 }
@@ -155,8 +155,6 @@ p {
 /* Showcase */
 #showcase {
     background: #333 url('../img/pi1.jpg') no-repeat center center/cover;
-
-    
     height: 99.2vh;
     color: #fff;
 }
@@ -177,7 +175,7 @@ p {
     background-color: rgba(0, 0, 0, 0.4);
 }
 
-/* Section: What We Do */
+/* Section: What */
 #what .items {
     display: flex;
     padding: 1rem;
@@ -196,7 +194,7 @@ p {
     margin-bottom: 1rem;
 }
 
-/* Section: Who We Are */
+/* Section: Who */
 #who {
     display: flex;
 }
@@ -218,7 +216,7 @@ p {
     display: flex;
     margin: auto;
     width: 70%;
-    border-radius:50%;
+    border-radius:100%;
 }
 
 #quocphuong{
@@ -248,3 +246,25 @@ p {
     width: 100%;
     padding: 0.5rem;
 }
+
+
+/* .dropdown-content {
+    display:contents;
+    position: absolute;
+    background-color: #f4f4f4;
+min-width: 160px;
+box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+z-index: 1;
+}
+.dropdown-content a{
+    color:#f4f4f4;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    
+}
+.dropdown-content a:hover {background-color: #66ccff;}
+.dropdown-content:hover .dropdown-content{
+    display: block;
+} */
