--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ p {
 }
 
 .list li {
-    padding: 0.5rem 0;
+    padding: 0.5rem 0;  
     border-bottom: 1px dotted #444;
 }
 
@@ -154,7 +154,7 @@ p {
 
 /* Showcase */
 #showcase {
-    background: #333 url('../img/pi1.jpg') no-repeat center center/cover;
+    background:#333 url('../img/pi1.jpg') no-repeat center center/cover;
     height: 99.2vh;
     color: #fff;
 }
@@ -219,9 +219,7 @@ p {
     border-radius:100%;
 }
 
-#quocphuong{
-    width: 200%;
-}
+
 
 /* Section: Contact */
 #contact {
@@ -248,7 +246,7 @@ p {
 }
 
 
-/* .dropdown-content {
+.dropdown-content {
     display:contents;
     position: absolute;
     background-color: #f4f4f4;
@@ -267,4 +265,4 @@ z-index: 1;
 .dropdown-content a:hover {background-color: #66ccff;}
 .dropdown-content:hover .dropdown-content{
     display: block;
-} */
+}
